--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-drop": "^3.1.6",
     "react-icons": "^4.4.0",
     "react-pro-sidebar": "^0.7.1",
     "react-query": "^3.39.2",
