--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +15,7 @@
     "bootstrap": "^5.2.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^18.2.0",
     "react-file-drop": "^3.1.6",
     "react-icons": "^4.4.0",
@@ -27,6 +29,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.54.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
