--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendyol-js/react-carousel": "^3.0.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.2.2",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-currency-input": "^1.3.6",
     "react-dom": "^18.2.0",
     "react-file-drop": "^3.1.6",
     "react-icons": "^4.4.0",
+    "react-owl-carousel": "^2.3.3",
     "react-pro-sidebar": "^0.7.1",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-telefone-brasileiro": "^1.0.5",
     "reactstrap": "^9.1.4",
     "redux": "^4.2.0",
