--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-currency-input": "^1.3.6",
     "react-dom": "^18.2.0",
     "react-file-drop": "^3.1.6",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.7.1",
     "react-owl-carousel": "^2.3.3",
     "react-pro-sidebar": "^0.7.1",
     "react-query": "^3.39.2",
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-telefone-brasileiro": "^1.0.5",
+    "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
