--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
-    "react-currency-input": "^1.3.6",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-file-drop": "^3.1.6",
     "react-icons": "^4.7.1",
