--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ services:
   app:
     build:
       context: ./
-      dockerfile: dockerfile
+      dockerfile: Dockerfile
     working_dir: /app
     volumes:
       - ./:/app
       - /app/node_modules # Remove this if you have pure JS dependencies
     ports:
-      - "3000:3000"
+      - '3000:3000'
