--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
+
+  "engines": {
+    "node": "16.19.0"
+  },  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
