--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "node": "16.19.0"
   },  
   "scripts": {
-    "start": "NODE_OPTIONS=--max_old_space_size=1024 react-scripts start",
+    "start": "node --optimize_for_size --max_old_space_size=460 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
