--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "node": "16.19.0"
   },  
   "scripts": {
-    "start": "node --optimize_for_size --max_old_space_size=460 dist/main.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "NODE_OPTIONS=--max-old-space-size=500 --optimize-for-size react-scripts start",
+    "build": "NODE_OPTIONS=--max-old-space-size=500 --optimize-for-size react-scripts build",
+    "test": "NODE_OPTIONS=--max-old-space-size=500 --optimize-for-size react-scripts test",
     "eject": "react-scripts eject"
-  },
+  },  
   
   "eslintConfig": {
     "extends": [
