--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "node": "16.19.0"
   },  
   "scripts": {
-    "start": "NODE_OPTIONS=--max-old-space-size=500 --optimize-for-size react-scripts start",
-    "build": "NODE_OPTIONS=--max-old-space-size=500 --optimize-for-size react-scripts build",
-    "test": "NODE_OPTIONS=--max-old-space-size=500 --optimize-for-size react-scripts test",
+    "start": "NODE_OPTIONS=--max-old-space-size=500 react-scripts start",
+    "build": "NODE_OPTIONS=--max-old-space-size=500 react-scripts build",
+    "test": "NODE_OPTIONS=--max-old-space-size=500 react-scripts test",
     "eject": "react-scripts eject"
   },  
   
