--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },  
   "scripts": {
     "start": "NODE_OPTIONS=--max-old-space-size=500 react-scripts start",
-    "build": "NODE_OPTIONS=--max-old-space-size=500 react-scripts build",
-    "test": "NODE_OPTIONS=--max-old-space-size=500 react-scripts test",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },  
   
