--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "node": "16.19.0"
   },  
   "scripts": {
-    "start": "NODE_OPTIONS=--max-old-space-size=500 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
