--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@trendyol-js/react-carousel": "^3.0.0",
+    "apexcharts": "^3.37.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
