--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@trendyol-js/react-carousel": "^3.0.0",
     "apexcharts": "^3.37.2",
-    "axios": "^0.27.2",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -26,6 +25,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "reactstrap": "^9.1.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sweetalert": "^2.1.2",
